--- a/CAP_PROJECT/.settings/org.talend.repository.prefs
+++ b/CAP_PROJECT/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=main
 repository.project.id=enc\:migration.token.encryption.key\:5uw/4aVqk1RAJh2SVbydDwTh0d9I+Lklpz+lbzk8oDMRiWufxM+TJ5k\=
